# TaxiApp

./: BreadthFirstSearch.cpp  BreadthFirstSearch.h  BreadthFirstSearchTest.cpp  CMakeLists.txt  Driver.cpp  Driver.h  DriverTest.cpp  Graph.h  Map.cpp  Map.h  MapTest.cpp  Node.h  NodeBlock.cpp  NodeBlock.h  NodeBlockTest.cpp  Passenger.cpp  Passenger.h  PassengerTest.cpp  Point.cpp  Point.h  PointTest.cpp  Taxi.cpp  Taxi.h  TaxiStation.cpp  TaxiStation.h  TaxiStationTest.cpp  TaxiTest.cpp  TripInfo.cpp  TripInfo.h  TripInfoTest.cpp  easylogging++.h  main.cpp
src/: BreadthFirstSearch.cpp  BreadthFirstSearch.h  Client.cpp  Client.h  ClientDriver.cpp  ClientDriver.h  Driver.cpp  Driver.h  InfoForClientThread.cpp  InfoForClientThread.h  InfoForTripThread.cpp  InfoForTripThread.h  InputValidityTests.cpp  InputValidityTests.h  Job.cpp  Job.h  MainFlow.cpp  MainFlow.h  Map.cpp  Map.h  Node.h  NodeBlock.cpp  NodeBlock.h  Passenger.cpp  Passenger.h  Point.cpp  Point.h  Server.cpp  Server.h  Socket.h  Taxi.cpp  Taxi.h  TaxiStation.cpp  TaxiStation.h  TaxiTest.cpp  Tcp.cpp  Tcp.h  ThreadPool.cpp  ThreadPool.h  TripInfo.cpp  (+4 more)
test/: BreadthFirstSearchTest.cpp  DriverTest.cpp  MapTest.cpp  NodeBlockTest.cpp  PassengerTest.cpp  PointTest.cpp  TaxiStationTest.cpp  TaxiTest.cpp  TripInfoTest.cpp
